added Groovy-Eclipse for Eclipse 4.6 platform version

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -333,6 +333,110 @@
                  url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
            </overview>
         </connectorDescriptor>
+
+
+        <!-- Groovy-Eclipse for Mars 4.6 -->
+         <connectorDescriptor
+               categoryId="com.springsource.sts.discovery-directory.framework.support"
+               description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+               id="org.codehaus.groovy.eclipse.feature"
+               kind="task, document"
+               license="Free, EPL/ASL"
+               groupId="certified"
+               name="Groovy-Eclipse"
+               provider="Codehaus.org"
+               platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
+   			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.6">
+            <iu id="org.codehaus.groovy.eclipse.feature" />
+            <iu id="org.codehaus.groovy.jdt.patch" />
+            <icon
+                  image32="images/groovy_32.png"></icon>
+            <overview
+                  summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+                  url="http://groovy.codehaus.org/Eclipse+Plugin">
+            </overview>
+         </connectorDescriptor>
+		 
+         <connectorDescriptor
+               categoryId="com.springsource.sts.discovery-directory.framework.support"
+               description="This feature provides the Groovy 2.2 compiler for Groovy-Eclipse.  Once installed, the 2.2 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+               id="org.codehaus.groovy22.feature"
+               kind="task, document"
+               license="Free, EPL/ASL"
+               groupId="certified"
+               name="Groovy 2.2 Compiler for Groovy-Eclipse"
+               provider="Codehaus.org"
+               platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
+   			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.6">
+            <iu id="org.codehaus.groovy22.feature" />
+            <icon
+                  image32="images/groovy_32.png"></icon>
+            <overview
+                  summary="The Groovy 2.2 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                  url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+            </overview>
+         </connectorDescriptor>
+		 
+         <connectorDescriptor
+               categoryId="com.springsource.sts.discovery-directory.framework.support"
+               description="This feature provides the Groovy 2.3 compiler for Groovy-Eclipse.  Once installed, the 2.3 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+               id="org.codehaus.groovy23.feature"
+               kind="task, document"
+               license="Free, EPL/ASL"
+               groupId="certified"
+               name="Groovy 2.3 Compiler for Groovy-Eclipse"
+               provider="Codehaus.org"
+               platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
+   			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.6">
+            <iu id="org.codehaus.groovy23.feature" />
+            <icon
+                  image32="images/groovy_32.png"></icon>
+            <overview
+                  summary="The Groovy 2.3 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                  url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+            </overview>
+         </connectorDescriptor>
+		 
+         <connectorDescriptor
+               categoryId="com.springsource.sts.discovery-directory.framework.support"
+               description="This feature provides the Groovy 2.4 compiler for Groovy-Eclipse.  Once installed, the 2.4 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+               id="org.codehaus.groovy24.feature"
+               kind="task, document"
+               license="Free, EPL/ASL"
+               groupId="certified"
+               name="Groovy 2.4 Compiler for Groovy-Eclipse"
+               provider="Codehaus.org"
+               platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
+   			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.6">
+            <iu id="org.codehaus.groovy24.feature" />
+            <icon
+                  image32="images/groovy_32.png"></icon>
+            <overview
+                  summary="The Groovy 2.4 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                  url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+            </overview>
+         </connectorDescriptor>
+		 
+         <connectorDescriptor
+               categoryId="com.springsource.sts.discovery-directory.framework.support"
+               description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+               id="org.codehaus.groovy.m2eclipse.feature"
+               kind="task, document"
+               license="Free, EPL"
+               groupId="certified"
+               name="Groovy-Eclipse Configurator for M2Eclipse"
+               provider="Codehaus.org"
+               platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
+   			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.6">
+            <iu id="org.codehaus.groovy.m2eclipse.feature" />
+            <iu id="org.codehaus.groovy.jdt.patch" />
+            <icon
+                  image32="images/groovy_32.png"></icon>
+            <overview
+                  summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+                  url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
+            </overview>
+         </connectorDescriptor>
       <!-- END Groovy-Eclipse -->
 
       <!-- BEGIN Gradle-IDE -->
