--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -744,6 +744,7 @@
             id="org.eclipse.datatools.enablement.feature"
             license="Free, EPL"
             kind="task"
+            groupId="certified"
             name="Eclipse Data Tools"
             provider="Eclipse Foundation"
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
