--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -354,10 +354,10 @@
             name="Gradle (STS Legacy) Support"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.6"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.6"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6"> -->
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -377,10 +377,10 @@
             name="Gradle (STS Legacy) Support"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -402,7 +402,7 @@
             name="Cloud Foundry Manifest Editing Support Language Server"
             provider="Pivotal Inc."
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/sts4-language-servers">
+			siteUrl="http://download.springsource.com/release/TOOLS/sts4-language-servers">
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature" />
          <icon
                image32="images/spring.png">
@@ -422,7 +422,7 @@
             name="Cloud Foundry Manifest Editing Support Language Server"
             provider="Pivotal Inc."
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/sts4-language-servers">
+			siteUrl="http://download.springsource.com/release/TOOLS/sts4-language-servers">
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature" />
          <icon
                image32="images/spring.png">
@@ -443,7 +443,7 @@
             name="Spring Tools 4 Public Beta - Early Access Extension Pack"
             provider="Pivotal Inc."
             platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.2)(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/sts4/update/e4.7/">
+			siteUrl="http://download.springsource.com/release/TOOLS/sts4/update/e4.7/">
          <iu id="org.springframework.tooling.boot.ls.feature" />
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature" />
          <iu id="org.springframework.tooling.bosh.ls.feature" />
@@ -469,7 +469,7 @@
             name="Spring Tools 4 Public Beta - Early Access Extension Pack"
             provider="Pivotal Inc."
             platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.2)(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/sts4/update/e4.8/">
+			siteUrl="http://download.springsource.com/release/TOOLS/sts4/update/e4.8/">
          <iu id="org.springframework.tooling.boot.ls.feature" />
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature" />
          <iu id="org.springframework.tooling.bosh.ls.feature" />
@@ -496,10 +496,10 @@
             name="Spring IDE"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.6"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.6"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6"> -->
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -530,10 +530,10 @@
             name="Spring IDE"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -566,10 +566,10 @@
             name="Spring IDE - Roo Extension"
             provider="Pivotal Software, Inc., Disid"
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.6"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.6"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6"> -->
          <icon
                image32="images/spring.png">
          </icon>
@@ -588,10 +588,10 @@
             name="Spring IDE - Roo Extension"
             provider="Pivotal Software, Inc., Disid"
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
          <icon
                image32="images/spring.png">
          </icon>
@@ -629,7 +629,7 @@
             license="Free, GPL v3"
             name="Spring Roo (1.1 snapshot release)"
             provider="SpringSource, a division of VMware, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/e3.5">
+            siteUrl="http://download.springsource.com/release/TOOLS/extensions/e3.5">
          <icon
                image32="images/spring_roo_32.png">
          </icon>
@@ -833,7 +833,7 @@
             license="Commercial"
             name="Pivotal tc Server Developer Edition"
             provider="Pivotal Software, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/extensions/sts380">
+            siteUrl="http://download.springsource.com/release/TOOLS/extensions/sts380">
          <icon
                image32="images/spring.png">
          </icon>
@@ -852,10 +852,10 @@
             name="Pivotal tc Server Integration for Eclipse"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.6"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.6"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.6"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6"> -->
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <icon
                image32="images/spring.png">
@@ -875,10 +875,10 @@
             name="Pivotal tc Server Integration for Eclipse"
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7">
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
-<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <icon
                image32="images/spring.png">
@@ -968,7 +968,7 @@
             name="VMforce Integration"
             platformFilter="(com.springsource.sts.version&gt;=2.5.1)"
             provider="VMware, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/cloud">
+            siteUrl="http://download.springsource.com/release/TOOLS/third-party/cloud">
          <iu id="com.vmware.sts.server.vmforce" />
          <iu id="org.datanucleus.ide.eclipse.feature" />
          <icon
@@ -1009,7 +1009,7 @@
             name="Performance patch for Bug 386070"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.1))"
             provider="SpringSource, a division of VMware, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/patches/bug386070/">
+            siteUrl="http://download.springsource.com/release/TOOLS/patches/bug386070/">
          <icon
                image32="images/eclipse_32.gif">
          </icon>
@@ -1047,7 +1047,7 @@
             name="Scala IDE for Eclipse"
             platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.7.9))"
             provider="scala-ide.org (Scala IDE for Eclipse)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/scala/e3.7">
+            siteUrl="http://download.springsource.com/release/TOOLS/third-party/scala/e3.7">
          <iu id="org.scala-ide.sdt.feature" />
          <icon
                image32="images/scala_32.png">
@@ -1066,7 +1066,7 @@
             name="Scala IDE for Eclipse"
             platformFilter="(platform.version&gt;=3.8.0)"
             provider="scala-ide.org (Scala IDE for Eclipse)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/scala/e4.2">
+            siteUrl="http://download.springsource.com/release/TOOLS/third-party/scala/e4.2">
          <iu id="org.scala-ide.sdt.feature" />
          <icon
                image32="images/scala_32.png">
